--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    
-    <div class="game-board">
+    <canvas id="janela-do-jogo">
         <img src="../imagens/SNES - Super Mario World - Yoshis Island 1.png" alt="">
-    </div>
+    </canvas>
+
 
 
     <script src="../JS/jogo-mario-bross.js" id="cenario1"></script>
