adicionei algumas imagens

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <img src="../imagens/SNES - Super Mario World - Yoshis Island 1.png" alt="">
     </canvas>
 
-
+    <div class="mundo-do-jogo">
+        <img src="imagens/mario-running-tiny.gif" alt="" class="mario">
+        <img src="imagens/SNES - Super Mario World - Yoshis Island 1.png" alt="" class="cenario">
+    </div>
 
     <script src="../JS/jogo-mario-bross.js" id="cenario1"></script>
 </body>
