--- a/index.html
+++ b/index.html
@@ -8,15 +8,8 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <canvas id="janela-do-jogo">
-        <img src="../imagens/SNES - Super Mario World - Yoshis Island 1.png" alt="">
-    </canvas>
-
-    <div class="mundo-do-jogo">
-        <img src="imagens/mario-running-tiny.gif" alt="" class="mario">
-        <img src="imagens/SNES - Super Mario World - Yoshis Island 1.png" alt="" class="cenario">
-    </div>
-
-    <script src="../JS/jogo-mario-bross.js" id="cenario1"></script>
+    
+<canvas id="mundo-do-jogo"></canvas>
+    <script src="../JS/jogo-mario-bross.js"></script>
 </body>
 </html>
