--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
-<body>
+<body onresize="ajustaTamanhoPalcoJogo()">
     
-<canvas id="mundo-do-jogo"></canvas>
+    <img src="imagens/SNES - Super Mario World - Mario.png" alt="">
     <script src="../JS/jogo-mario-bross.js"></script>
 </body>
 </html>
