--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <title>Jogo Mario bross</title>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
-    
-    <img src="imagens/SNES - Super Mario World - Mario.png" alt="">
-    <script src="../JS/jogo-mario-bross.js"></script>
+   <canvas width="800" height="600"></canvas>
+   
+    <script src="./JS/jogo-mario-bross.js"></script>
+    <script src="./Sprites/Sprite.js"></script>
 </body>
 </html>
