--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Jogo Mario bross</title>
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
-<body onresize="ajustaTamanhoPalcoJogo()">
+<body >
    <canvas width="800" height="600"></canvas>
    
-    <script src="./JS/jogo-mario-bross.js"></script>
+    <script src="./JS/script.js"></script>
     <script src="./Sprites/Sprite.js"></script>
 </body>
 </html>
