--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo Mario bross</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <script src="JS/Sprite.js"></script>
+    <script src="JS/script.js"></script>
+   
 </head>
 <body >
    <canvas width="800" height="600"></canvas>
-
-
-     <script src="./Sprites/Sprite.js"></script>
-      <script src="./JS/script.js"></script>
-    
+  
 </body>
 </html>
