--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
    
 </head>
 <body >
-   <canvas width="800" height="600"></canvas>
+   <canvas width="800" height="600"> </canvas>
+        <div>
+            <img src="img/cenario-mario.png" alt="">
+            <img src="img/mario-avt.png" id="mr" alt="">
+        </div>
+   
   
 </body>
 </html>
